# ARKANOID

./: .gitignore  CMakeLists.txt  README.md  reporules.md
doc/: GDD.tex  GDD.toc  pdflatex211943.fls
src/: main.cpp
src/controller/: GameControl.cpp  GameControl.hpp
src/model/: Ball.cpp  Ball.hpp  Balls.cpp  Balls.hpp  Board.cpp  Board.hpp  Brick.cpp  Brick.hpp  GameStats.cpp  GameStats.hpp  Laser.cpp  Laser.hpp  Lasers.cpp  Lasers.hpp  PowerUps.cpp  PowerUps.hpp  Racket.cpp  Racket.hpp
src/model/levels/: level1.txt  level2txt  level_1  level_1.txt  level_2  level_3  level_4
src/utils/: Configs.hpp  GameStates.cpp  GameStates.hpp  LevelLoader.hpp  ScoreLoader.hpp
src/view/: GameScreen.cpp  GameScreen.hpp
